<resources>
    <string name="app_name">Colors</string>
    <string name="lbl_red">Red</string>
    <string name="lbl_green">Green</string>
    <string name="lbl_blue">Blue</string>
    <string name="lbl_alpha">Alpha</string>
    <!--Options Menu label/options-->
    <string name="lblColors">Colors</string>
    <string name="lblOpTransparent">Transparent</string>
    <string name="lblOpSemiTransparent">SemiTransparent</string>
    <string name="lblOpOpaque">Opaque</string>
    <string name="lblOpBlack">Black</string>
    <string name="lblOpWhite">White</string>
    <string name="lblOpRed">Red</string>
    <string name="lblOpGreen">Green</string>
    <string name="lblOpBlue">Blue</string>
    <string name="lblOpCyan">Cyan</string>
    <string name="lblOpMagenta">Magenta</string>
    <string name="lblOpYellow">Yellow</string>
    <string name="lblOpReset">Reset</string>
    <string name="lblOpAboutof">About of</string>
    <string name="lblHelp">Help</string>
    <string name="lblClose">Close app</string>
    <!--About-->
    <string name="lblName">Oscar Alexander Rodriguez Insuasty</string>
    <string name="lblEmail">rodriguezinsuastyoscar@gmail.com</string>
    <string name="lblUn">CESMAG UNIVERSITY</string>
    <string name="lblVer">Version 1.0</string>

    <string name="lblText">To change the color of the image, move the search bar corresponding to red, green and blue, until you get the desired color.</string>
    <string name="lblText2">If the opacity of the color is not noticed, move the Seekbar Alpha.</string>

    <string name="lblCol">Selected color</string>

</resources>
