<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/icHelp"
        android:title="@string/lblHelp"
        android:icon="@drawable/ic_help"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/icTransparent"
        android:title="@string/lblOpTransparent"
        android:icon="@drawable/ic_transparent"
        app:showAsAction="always"></item>


    <item android:id="@+id/iteColors" android:title="@string/lblColors">

        <menu>

            <item android:id="@+id/iteTransparent" android:title="@string/lblOpTransparent" ></item>
            <item android:id="@+id/iteSemitransparent" android:title="@string/lblOpSemiTransparent"></item>
            <item android:id="@+id/iteOpaque" android:title="@string/lblOpOpaque"></item>
            <item android:id="@+id/iteBlack" android:title="@string/lblOpBlack"></item>
            <item android:id="@+id/iteWhite" android:title="@string/lblOpWhite"></item>
            <item android:id="@+id/iteRed" android:title="@string/lblOpRed"></item>
            <item android:id="@+id/iteGreen" android:title="@string/lblOpGreen"></item>
            <item android:id="@+id/iteBlue" android:title="@string/lblOpBlue"></item>
            <item android:id="@+id/iteCyan" android:title="@string/lblOpCyan"></item>
            <item android:id="@+id/iteMagenta" android:title="@string/lblOpMagenta"></item>
            <item android:id="@+id/iteYellow" android:title="@string/lblOpYellow"></item>

        </menu>

    </item>

    <item android:id="@+id/iteReset" android:title="@string/lblOpReset"></item>
    <item android:id="@+id/iteAboutof" android:title="@string/lblOpAboutof"></item>
    <item android:id="@+id/iteClose" android:title="@string/lblClose"></item>

</menu>